# nora-ai-trading-lab

./: .gitattributes  .gitignore  pyproject.toml
architecture-lock/: INDEX.md  (+10 more)
engine/labengine/: Cargo.toml
engine/labengine/src/: aggregation.rs  ast.rs  closed_trade_metrics.rs  exit_condition.rs  indicator_artifact.rs  indicators.rs  main.rs  rng_stream.rs  series.rs  simulator.rs  strategy_suite.rs  task.rs  time.rs
engine/labengine/tests/fixtures/: phase1_utc_m1.parquet  phase2_ast_evaluate_task.json  phase2_ast_task.json  phase2_cross_task.json  phase2_distance_atr_task.json  phase2_entry_intent_task.json  phase2_exit_intent_task.json  phase2_indicator_expected.json  phase2_indicator_task.json  phase2_indicator_utc.csv  phase2_indicator_utc.parquet  phase2_initial_bracket_collision_entry.parquet  phase2_initial_bracket_collision_task.json  phase2_initial_bracket_leave_open_task.json  phase2_initial_bracket_long_task.json  phase2_initial_bracket_short_task.json  phase2_macd_slope_task.json  phase2_market_simulator_leave_open_entry.parquet  phase2_market_simulator_leave_open_exit.parquet  phase2_market_simulator_leave_open_market.parquet  phase2_market_simulator_leave_open_task.json  phase2_market_simulator_short_entry.parquet  phase2_market_simulator_short_exit.parquet  phase2_market_simulator_short_market.parquet  phase2_market_simulator_short_task.json  phase2_market_simulator_task.json  phase2_percentile_task.json  phase2_slope_expected.json  phase2_slope_task.json  phase2_time_exit_entry.parquet  phase2_time_exit_exit.parquet  phase2_time_exit_long_task.json  (+12 more)
(+1472 files in other folders)
