[package]
name = "labengine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "labengine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
parquet = { version = "54", features = ["arrow"] }
arrow-array = "54"
arrow-schema = "54"
